--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .ipynb_checkpoints/
 03_confidence_intervals_and_prediction_intervals/Untitled.ipynb
+Before_monday.pdf
+03_confidence_intervals_and_prediction_intervals/In_Class_Topic_3.docx
