--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 03_confidence_intervals_and_prediction_intervals/Untitled.ipynb
 Before_monday.pdf
 03_confidence_intervals_and_prediction_intervals/In_Class_Topic_3.docx
+06_Portfolio_optimization_and_copulas/chapter5_some.xlsx
