Adding Newsvendor and VoI material

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 Before_monday.pdf
 03_confidence_intervals_and_prediction_intervals/In_Class_Topic_3.docx
 06_Portfolio_optimization_and_copulas/chapter5_some.xlsx
+07_Optimization_of_decision_variables/warmup/~$oblem 1.docx
+07_Optimization_of_decision_variables/warmup/Problem 1.docx
+07_Optimization_of_decision_variables/hello/hello.py
+07_Optimization_of_decision_variables/Celestial_Case.docx
+07_Optimization_of_decision_variables/Celestial_Case.pdf
