adding return to ads material

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Before_monday.pdf
 07_Optimization_of_decision_variables/hello/hello.py
 07_Optimization_of_decision_variables/Celestial_Case.docx
 07_Optimization_of_decision_variables/Celestial_Case.pdf
+08_Returns_to_ads/Untitled.ipynb
